--- a/react-diary/package.json
+++ b/react-diary/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "dependencies": {
     "@react-login-page/page5": "^1.0.4",
+    "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.20.6",
+    "axios": "^1.7.7",
+    "less": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-login-page": "^1.0.4",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
